kubernetes/gabernetes/apps/prometheus/app/securitypolicy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: prometheus-auth
  namespace: prometheus
spec:
  mergeType: StrategicMerge
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: kube-prometheus-stack-prometheus
  oidc:
    cookieConfig:
      sameSite: Lax
    provider:
      issuer: https://${oauth_host}/application/o/prometheus/
      authorizationEndpoint: https://${oauth_host}/application/o/authorize/
      tokenEndpoint: https://${oauth_host}/application/o/token/
    clientIDRef:
      name: prometheus-oidc
    clientSecret:
      name: prometheus-oidc
    scopes: [openid, offline_access]
