kubernetes/gabernetes/apps/prometheus/app/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: ingress-prometheus
spec:
  endpointSelector:
    matchLabels:
      policy.gabe565.com/ingress-prometheus: "true"
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: prometheus
            app.kubernetes.io/name: prometheus
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: egress-prometheus
spec:
  endpointSelector:
    matchLabels:
      policy.gabe565.com/egress-prometheus: "true"
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: prometheus
            app.kubernetes.io/name: prometheus
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: prometheus
  namespace: prometheus
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: prometheus
      app.kubernetes.io/instance: kube-prometheus-stack-prometheus
  egress:
    - toEndpoints:
        - matchLabels:
            policy.gabe565.com/ingress-prometheus: "true"
          matchExpressions:
            - key: io.kubernetes.pod.namespace
              operator: Exists
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "9153"
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: longhorn-system
            app: longhorn-manager
      toPorts:
        - ports:
            - port: "9500"
    - toCIDRSet:
        - cidr: 192.168.1.1/32
        - cidr: 192.168.1.240/32
      toPorts:
        - ports:
            - port: "9100"
  ingress:
    - fromEndpoints:
        - matchLabels:
            policy.gabe565.com/egress-prometheus: "true"
          matchExpressions:
            - key: io.kubernetes.pod.namespace
              operator: Exists
